# ADK-MCP-Agents

./: .env.example  .gitignore  README.md  __init__.py  code_executor.py  code_mode_agent.py  direct_agent.py  example.py  mcp_config.py  pyproject.toml  schema_fixer.py  test.sh  test_code_mode_agent.py  test_direct_agent.py  tool_registry.py
servers/: __init__.py
servers/calculator/: __init__.py  calculator.py  mcp_server.py
